fixed main menu alignment

--- a/portfolio/src/App.css
+++ b/portfolio/src/App.css
@@ -7,7 +7,7 @@
 }
 
 .positonDiv {
-  height: 100%;
+  height: 100vh;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -21,6 +21,7 @@ html {
 }
 #root {
   height: 100vh;
+  overflow:auto;
 }
 
 body {
